# rocksdb-memtable-switching

./: .gitmodules  README.md
benchmark/: CMakeLists.txt  README.md  cfg.cc  cfg.h  config_options.h  db_env.cc  db_env.h  env.cc  env.h  main-old.cc  main.cc
benchmark-runs/: .gitignore
benchmark-runs/dynamic/: 250k_i-250k_pq.spec.json  445k_i-5k_pq.spec.json  500k_i.spec.json  5k_i-445k_pq.spec.json  dynamic-workload.spec.json  dynamic.options.json  hash-linklist.options.json  skiplist.options.json
benchmark-runs/sandbox/: vector.options.json
benchmark-runs/static-memtables/: 100k_i.spec.json  1k_i-99k_pq.spec.json  50k_i-50k_pq.spec.json  dynamic.options.json  hash-skiplist.options.json
decider/: .gitignore  README.md  data.csv  main.py  no-name-39b8bdc8-c40e-431a-8256-c406794d16c7-results.csv  plot.py  plot2.py  plot3.py  plot4.py  requirements.txt
decider/presentation/: 1m_i-skiplist_20-1.csv  1m_i-skiplist_24-1.csv  1m_i-vector_16-1.csv  1m_i-vector_16-2.csv  1m_i-vector_20-1.csv  1m_i-vector_20-2.csv  1m_i-vector_24-1.csv  1m_i-vector_24-2.csv  900k_i-100k_pq-vector_24-1.csv
workload-gen/: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  operations.md  workload_schema.json
workload-gen/sandbox/: Cargo.toml
workload-gen/specs/: 10k_i-990k_pq.json  1ki_1kpq.json  1ki_1kpq.spec.json  1m-rq.spec.json  1m_i.json  500k_i-500k_pq.json  990k_i-10k_pq.json
workload-gen/workload-gen/: Cargo.toml  tmp.py
workload-gen/workload-gen-cli/: Cargo.toml
workload-gen/workload-gen-cli/src/: main.rs
workload-gen/workload-gen/benches/: benchmark.rs  my_benchmark.rs
workload-gen/workload-gen/src/: lib.rs
workload-gen/workload-gen/test_specs/: 1m_i.json  complex.json  deletes.json
workload-gen/workload-gen/test_specs/benchmarks/: 1m_i-1m_d.json  1m_i-1m_rq.json
workload-gen/workloads/: 1ki_1kpq.txt  workload_spec.json  workload_spec.txt  workload_spec2.json  workload_spec2.txt
