[package]
name = "workload-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rand = { version = "0.8.5", features = ["serde"] }
rand_distr = { version = "0.4.3", features = ["serde"] }
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
