[package]
name = "workload-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
rand = { version = "0.9.1", features = ["serde"] }
rand_distr = { version = "0.4.3", features = ["serde"] }
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
rand_xoshiro = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true